fixed master thesis error

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -96,7 +96,7 @@
 			<span class="authors">
 				Park, Sungmi.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -146,7 +146,7 @@
 			<span class="authors">
 				Birhanu, Addisu Afework.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -170,7 +170,7 @@
 			<span class="authors">
 				Brhan, Yohannes Yemane.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -194,7 +194,7 @@
 			<span class="authors">
 				Bukola, Ajayi Betty.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -242,7 +242,7 @@
 			<span class="authors">
 				Ham, Ji Yoon.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -266,7 +266,7 @@
 			<span class="authors">
 				Jang, Subong.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -338,7 +338,7 @@
 			<span class="authors">
 				Park, Minjin.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
@@ -388,7 +388,7 @@
 			<span class="authors">
 				Won, Gwangjae.
 			</span><br />
-			<span class="venuetype">Ph.D. thesis, Hallym University</span><span class="venue"></span>.
+			<span class="venuetype">Master's thesis, Hallym University</span><span class="venue"></span>.
 			<br />
 			</span>
 			<br />
